--- a/ContinuesVoiceRecognition-master/ContinuesVoiceRecognition-master/app/src/main/res/values/strings.xml
+++ b/ContinuesVoiceRecognition-master/ContinuesVoiceRecognition-master/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ContinuesVoiceRecognition</string>
+    <string name="app_name">SMART HAFAZ</string>
     <string name="action_settings">Settings</string>
     <string name="record_audio_is_required">We will only use the Record Audio Permission in order to use the Speech to Text Feature</string>
     <string name="start_listening">Start Recording</string>
@@ -7,7 +7,15 @@
     <string name="no_results_found">No Matching Results</string>
     <string name="mute">Mute</string>
     <string name="un_mute">unMute</string>
-    <string name="destroied">SpeeechRecognizer has been destroyed</string>
+    <string name="destroyed">SpeechRecognizer has been destroyed</string>
     <string name="you_may_speak">You may speak now</string>
     <string name="speech_not_supported">Sorry! Your device no support speech input</string>
+    <string name="chapter_name">What is the chapter Name</string>
+    <string name="Next">Next >> </string>
+    <string name="Back"> GoBack </string>
+    <string name="Play"> Play </string>
+    <string name="Introduction">Smart Hafaz is an android application developed for visually impaired students.
+        Utilising voice detection,it assists students in memorising the Quran via  the \'listen and repeat\' technique.
+        The application contains chapters starting from al-Dhuha to al-Nas, and includes al-Fatihah as well.
+        Smart Hafaz was according primary school syllabus.It has two different level of recognition which is normal and faster.</string>
 </resources>
